syntax = "proto2";
import "identity.proto";

package wickr.proto;

message HandshakeV1 {

    reserved 1;

    message Seed {
        reserved 1;
        optional IdentityChain id_chain = 2;
        optional bytes ephemeral_pubkey = 3;
        optional bool identity_required = 4;
    }
    
    message Response {
        optional bytes ephemeral_pubkey = 2;
        optional bytes encrypted_response_data = 3;
        optional IdentityChain id_chain = 4;
        optional bytes kem_ctx = 5;
    }

    oneof payload {
        Seed seed = 2;
        Response response = 3;
    }
}

message HandshakeV1ResponseData {
    optional TransportRootKey root_key = 1;
}

message TransportRootKey {
    optional bytes secret = 1;
    optional uint32 cipher_id = 2;
    optional uint32 packets_per_evo_send = 3;
    optional uint32 packets_per_evo_recv = 4;
}

message StreamKey {
    optional bytes cipher_key = 1;
    optional bytes evolution_key = 2;
    optional uint32 packets_per_evo = 3;
    optional bytes user_data = 4;
}
